Add OperationsRepository and ClientsRepository.